examples/test/testpolicy3834.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3834
  namespace: namespace451
spec:
  podSelector:
    matchLabels:
      key11: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value29
          key4: value9
      podSelector:
        matchLabels:
          key4: value13
          key29: value10
          key2: value40
